// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component have to match type="search" snapshot 1`] = `
<Input
  0={
    Object {
      "displayName": "Input",
      "props": Object {
        "align": "'left'",
        "autocomplete": "autocomplete",
        "children": "children",
        "class": "class",
        "className": "className",
        "clear": "clear",
        "clear_button_title": "clear_button_title",
        "custom_element": Object {},
        "custom_method": [Function],
        "disabled": "disabled",
        "global_status_id": "global_status_id",
        "icon": "icon",
        "icon_position": "'left'",
        "icon_size": "icon_size",
        "id": "id",
        "inner_element": "inner_element",
        "inner_ref": [Function],
        "input_attributes": "input_attributes",
        "input_class": "input_class",
        "input_element": [Function],
        "input_state": "input_state",
        "keep_placeholder": "keep_placeholder",
        "label": "label",
        "label_direction": "'horizontal'",
        "label_sr_only": "label_sr_only",
        "on_blur": [Function],
        "on_change": [Function],
        "on_focus": [Function],
        "on_state_update": [Function],
        "on_submit": [Function],
        "on_submit_blur": [Function],
        "on_submit_focus": [Function],
        "placeholder": "placeholder",
        "readOnly": "readOnly",
        "selectall": "selectall",
        "size": "'default'",
        "skeleton": "skeleton",
        "status": "status",
        "status_no_animation": "status_no_animation",
        "status_props": Object {},
        "status_state": "status_state",
        "stretch": "stretch",
        "submit_button_icon": "submit_button_icon",
        "submit_button_status": "submit_button_status",
        "submit_button_title": "submit_button_title",
        "submit_button_variant": "custom type not supported, please set the correct value for submit_button_variant prop",
        "submit_element": [Function],
        "suffix": "suffix",
        "type": "type",
        "value": "value",
      },
    }
  }
  1={
    Object {
      "displayName": "InputSubmitButton",
      "props": Object {
        "className": "className",
        "disabled": "disabled",
        "icon": "icon",
        "icon_size": "icon_size",
        "id": "id",
        "on_submit": [Function],
        "on_submit_blur": [Function],
        "on_submit_focus": [Function],
        "skeleton": "skeleton",
        "status": "status",
        "status_props": Object {},
        "status_state": "status_state",
        "title": "title",
        "value": "value",
        "variant": "custom type not supported, please set the correct value for variant prop",
      },
    }
  }
  2={
    Object {
      "displayName": "SubmitButton",
      "props": Object {},
    }
  }
  3={
    Object {
      "displayName": "InputIcon",
      "props": Object {
        "icon": "icon",
      },
    }
  }
  align={null}
  autocomplete="off"
  class={null}
  className={null}
  clear={null}
  clear_button_title={null}
  custom_element={null}
  custom_method={null}
  disabled={false}
  global_status_id={null}
  icon={null}
  icon_position="left"
  icon_size={null}
  id="input"
  inner_element={null}
  inner_ref={null}
  input_attributes={null}
  input_class={null}
  input_element={null}
  input_state={null}
  keep_placeholder={null}
  label={null}
  label_direction={null}
  label_sr_only={null}
  on_blur={null}
  on_change={null}
  on_focus={null}
  on_state_update={null}
  on_submit={null}
  on_submit_blur={null}
  on_submit_focus={null}
  placeholder={null}
  readOnly={false}
  selectall={null}
  size={null}
  skeleton={null}
  status={null}
  status_no_animation={null}
  status_props={null}
  status_state="error"
  stretch={null}
  submit_button_icon="loupe"
  submit_button_status={null}
  submit_button_title={null}
  submit_button_variant="secondary"
  submit_element={null}
  suffix={null}
  type="search"
  value="test"
>
  <span
    className="dnb-input dnb-form-component dnb-input--search dnb-input--has-submit-element"
    data-has-content="true"
    data-input-state="virgin"
  >
    <span
      className="dnb-input__inner"
    >
      <AlignmentHelper
        className={null}
      >
        <span
          aria-hidden={true}
          className="dnb-alignment-helper"
        />
      </AlignmentHelper>
      <FormStatus
        attributes={null}
        class={null}
        className={null}
        global_status_id={null}
        icon="error"
        icon_size="medium"
        id="input-form-status"
        label={null}
        no_animation={null}
        role={null}
        show={null}
        size="default"
        skeleton={null}
        state="error"
        status="error"
        stretch={null}
        text={null}
        text_id="input-status"
        title={null}
        variant={null}
        width_element={null}
        width_selector={null}
      />
      <span
        className="dnb-input__row"
      >
        <span
          className="dnb-input__shell"
        >
          <input
            aria-describedby="input-submit-button"
            autoComplete="off"
            className="dnb-input__input"
            disabled={false}
            id="input"
            name="input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            type="search"
            value="test"
          />
        </span>
        <span
          className="dnb-input__submit-element"
        >
          <InputSubmitButton
            0={
              Object {
                "displayName": "Input",
                "props": Object {
                  "align": "'left'",
                  "autocomplete": "autocomplete",
                  "children": "children",
                  "class": "class",
                  "className": "className",
                  "clear": "clear",
                  "clear_button_title": "clear_button_title",
                  "custom_element": Object {},
                  "custom_method": [Function],
                  "disabled": "disabled",
                  "global_status_id": "global_status_id",
                  "icon": "icon",
                  "icon_position": "'left'",
                  "icon_size": "icon_size",
                  "id": "id",
                  "inner_element": "inner_element",
                  "inner_ref": [Function],
                  "input_attributes": "input_attributes",
                  "input_class": "input_class",
                  "input_element": [Function],
                  "input_state": "input_state",
                  "keep_placeholder": "keep_placeholder",
                  "label": "label",
                  "label_direction": "'horizontal'",
                  "label_sr_only": "label_sr_only",
                  "on_blur": [Function],
                  "on_change": [Function],
                  "on_focus": [Function],
                  "on_state_update": [Function],
                  "on_submit": [Function],
                  "on_submit_blur": [Function],
                  "on_submit_focus": [Function],
                  "placeholder": "placeholder",
                  "readOnly": "readOnly",
                  "selectall": "selectall",
                  "size": "'default'",
                  "skeleton": "skeleton",
                  "status": "status",
                  "status_no_animation": "status_no_animation",
                  "status_props": Object {},
                  "status_state": "status_state",
                  "stretch": "stretch",
                  "submit_button_icon": "submit_button_icon",
                  "submit_button_status": "submit_button_status",
                  "submit_button_title": "submit_button_title",
                  "submit_button_variant": "custom type not supported, please set the correct value for submit_button_variant prop",
                  "submit_element": [Function],
                  "suffix": "suffix",
                  "type": "type",
                  "value": "value",
                },
              }
            }
            1={
              Object {
                "displayName": "InputSubmitButton",
                "props": Object {
                  "className": "className",
                  "disabled": "disabled",
                  "icon": "icon",
                  "icon_size": "icon_size",
                  "id": "id",
                  "on_submit": [Function],
                  "on_submit_blur": [Function],
                  "on_submit_focus": [Function],
                  "skeleton": "skeleton",
                  "status": "status",
                  "status_props": Object {},
                  "status_state": "status_state",
                  "title": "title",
                  "value": "value",
                  "variant": "custom type not supported, please set the correct value for variant prop",
                },
              }
            }
            2={
              Object {
                "displayName": "SubmitButton",
                "props": Object {},
              }
            }
            3={
              Object {
                "displayName": "InputIcon",
                "props": Object {
                  "icon": "icon",
                },
              }
            }
            className={null}
            custom_element={null}
            custom_method={null}
            disabled={false}
            icon="loupe"
            icon_size="default"
            id="input-submit-button"
            inner_ref={null}
            input_state={null}
            on_blur={null}
            on_change={null}
            on_focus={null}
            on_state_update={null}
            on_submit={null}
            on_submit_blur={null}
            on_submit_focus={null}
            size={null}
            skeleton={false}
            status={null}
            status_props={null}
            status_state="error"
            title="Send knapp"
            value="test"
            variant="secondary"
          >
            <span
              className="dnb-input__submit-button"
              data-input-state="virgin"
            >
              <Button
                aria-label="Send knapp"
                bounding={null}
                class={null}
                className="dnb-input__submit-button__button dnb-button--input-button"
                custom_content={null}
                custom_element={null}
                custom_method={null}
                disabled={false}
                element={null}
                global_status_id={null}
                href={null}
                icon="loupe"
                icon_position="right"
                icon_size="default"
                id="input-submit-button"
                innerRef={null}
                inner_ref={null}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                on_click={null}
                size={null}
                skeleton={null}
                status={null}
                status_no_animation={null}
                status_props={null}
                status_state="error"
                stretch={null}
                text={null}
                title={null}
                to={null}
                tooltip={null}
                type="submit"
                value="test"
                variant="secondary"
                wrap={null}
              >
                <button
                  aria-label="Send knapp"
                  className="dnb-button dnb-button--secondary dnb-input__submit-button__button dnb-button--input-button dnb-button--icon-position-right dnb-button--has-icon dnb-button--icon-size-default dnb-button--size-medium"
                  disabled={false}
                  id="input-submit-button"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  type="submit"
                  value="test"
                >
                  <Content
                    aria-label="Send knapp"
                    bounding={null}
                    class={null}
                    className="dnb-input__submit-button__button dnb-button--input-button"
                    content={null}
                    custom_content={null}
                    custom_element={null}
                    custom_method={null}
                    disabled={false}
                    element={null}
                    global_status_id={null}
                    href={null}
                    icon="loupe"
                    icon_position="right"
                    icon_size="default"
                    id="input-submit-button"
                    innerRef={null}
                    inner_ref={null}
                    isIconOnly={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    on_click={null}
                    size={null}
                    skeleton={false}
                    status={null}
                    status_no_animation={null}
                    status_props={null}
                    status_state="error"
                    stretch={null}
                    text={null}
                    title={null}
                    to={null}
                    tooltip={null}
                    type="submit"
                    value="test"
                    variant="secondary"
                    wrap={null}
                  >
                    <span
                      aria-hidden={true}
                      className="dnb-button__alignment"
                      key="button-alignment"
                    >
                      ‌
                    </span>
                    <IconPrimary
                      alt={null}
                      aria-hidden={null}
                      attributes={null}
                      border={null}
                      className="dnb-button__icon"
                      color={null}
                      height={null}
                      icon="loupe"
                      inherit_color={true}
                      key="button-icon"
                      modifier={null}
                      size="default"
                      skeleton={false}
                      title={null}
                      width={null}
                    >
                      <span
                        aria-hidden={true}
                        className="dnb-icon dnb-icon--default dnb-button__icon dnb-icon--inherit-color"
                        data-test-id="loupe icon"
                        role="presentation"
                      >
                        <loupe>
                          <svg
                            fill="none"
                            height={16}
                            viewBox="0 0 16 16"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M12.03 10.97a.75.75 0 1 0-1.06 1.06l1.06-1.06Zm2.44 4.56a.75.75 0 1 0 1.06-1.06l-1.06 1.06Zm-3.5-3.5 3.5 3.5 1.06-1.06-3.5-3.5-1.06 1.06Zm.098-5.62a4.66 4.66 0 0 1-4.659 4.658v1.5a6.16 6.16 0 0 0 6.16-6.159h-1.5ZM6.41 11.067A4.66 4.66 0 0 1 1.75 6.41H.25a6.16 6.16 0 0 0 6.16 6.16v-1.5ZM1.75 6.41a4.66 4.66 0 0 1 4.66-4.66V.25A6.16 6.16 0 0 0 .25 6.41h1.5Zm4.66-4.66a4.66 4.66 0 0 1 4.658 4.66h1.5A6.16 6.16 0 0 0 6.41.25v1.5Z"
                              fill="#000"
                            />
                          </svg>
                        </loupe>
                      </span>
                    </IconPrimary>
                  </Content>
                </button>
                <FormStatus
                  attributes={null}
                  class={null}
                  className={null}
                  global_status_id={null}
                  icon="error"
                  icon_size="medium"
                  id="input-submit-button-form-status"
                  label={null}
                  no_animation={null}
                  role={null}
                  show={null}
                  size="default"
                  skeleton={null}
                  state="error"
                  status="error"
                  stretch={null}
                  text={null}
                  text_id="input-submit-button-status"
                  title={null}
                  variant={null}
                  width_element={null}
                  width_selector={null}
                />
              </Button>
            </span>
          </InputSubmitButton>
        </span>
      </span>
    </span>
  </span>
</Input>
`;

exports[`Input component have to match type="text" snapshot 1`] = `
<Input
  0={
    Object {
      "displayName": "Input",
      "props": Object {
        "align": "'left'",
        "autocomplete": "autocomplete",
        "children": "children",
        "class": "class",
        "className": "className",
        "clear": "clear",
        "clear_button_title": "clear_button_title",
        "custom_element": Object {},
        "custom_method": [Function],
        "disabled": "disabled",
        "global_status_id": "global_status_id",
        "icon": "icon",
        "icon_position": "'left'",
        "icon_size": "icon_size",
        "id": "id",
        "inner_element": "inner_element",
        "inner_ref": [Function],
        "input_attributes": "input_attributes",
        "input_class": "input_class",
        "input_element": [Function],
        "input_state": "input_state",
        "keep_placeholder": "keep_placeholder",
        "label": "label",
        "label_direction": "'horizontal'",
        "label_sr_only": "label_sr_only",
        "on_blur": [Function],
        "on_change": [Function],
        "on_focus": [Function],
        "on_state_update": [Function],
        "on_submit": [Function],
        "on_submit_blur": [Function],
        "on_submit_focus": [Function],
        "placeholder": "placeholder",
        "readOnly": "readOnly",
        "selectall": "selectall",
        "size": "'default'",
        "skeleton": "skeleton",
        "status": "status",
        "status_no_animation": "status_no_animation",
        "status_props": Object {},
        "status_state": "status_state",
        "stretch": "stretch",
        "submit_button_icon": "submit_button_icon",
        "submit_button_status": "submit_button_status",
        "submit_button_title": "submit_button_title",
        "submit_button_variant": "custom type not supported, please set the correct value for submit_button_variant prop",
        "submit_element": [Function],
        "suffix": "suffix",
        "type": "type",
        "value": "value",
      },
    }
  }
  1={
    Object {
      "displayName": "InputSubmitButton",
      "props": Object {
        "className": "className",
        "disabled": "disabled",
        "icon": "icon",
        "icon_size": "icon_size",
        "id": "id",
        "on_submit": [Function],
        "on_submit_blur": [Function],
        "on_submit_focus": [Function],
        "skeleton": "skeleton",
        "status": "status",
        "status_props": Object {},
        "status_state": "status_state",
        "title": "title",
        "value": "value",
        "variant": "custom type not supported, please set the correct value for variant prop",
      },
    }
  }
  2={
    Object {
      "displayName": "SubmitButton",
      "props": Object {},
    }
  }
  3={
    Object {
      "displayName": "InputIcon",
      "props": Object {
        "icon": "icon",
      },
    }
  }
  align={null}
  autocomplete="off"
  class={null}
  className={null}
  clear={null}
  clear_button_title={null}
  custom_element={null}
  custom_method={null}
  disabled={false}
  global_status_id={null}
  icon={null}
  icon_position="left"
  icon_size={null}
  id="input"
  inner_element={null}
  inner_ref={null}
  input_attributes={null}
  input_class={null}
  input_element={null}
  input_state={null}
  keep_placeholder={null}
  label={null}
  label_direction={null}
  label_sr_only={null}
  on_blur={null}
  on_change={null}
  on_focus={null}
  on_state_update={null}
  on_submit={null}
  on_submit_blur={null}
  on_submit_focus={null}
  placeholder={null}
  readOnly={false}
  selectall={null}
  size={null}
  skeleton={null}
  status={null}
  status_no_animation={null}
  status_props={null}
  status_state="error"
  stretch={null}
  submit_button_icon="loupe"
  submit_button_status={null}
  submit_button_title={null}
  submit_button_variant="secondary"
  submit_element={null}
  suffix={null}
  type="text"
  value="test"
>
  <span
    className="dnb-input dnb-form-component dnb-input--text"
    data-has-content="true"
    data-input-state="virgin"
  >
    <span
      className="dnb-input__inner"
    >
      <AlignmentHelper
        className={null}
      >
        <span
          aria-hidden={true}
          className="dnb-alignment-helper"
        />
      </AlignmentHelper>
      <FormStatus
        attributes={null}
        class={null}
        className={null}
        global_status_id={null}
        icon="error"
        icon_size="medium"
        id="input-form-status"
        label={null}
        no_animation={null}
        role={null}
        show={null}
        size="default"
        skeleton={null}
        state="error"
        status="error"
        stretch={null}
        text={null}
        text_id="input-status"
        title={null}
        variant={null}
        width_element={null}
        width_selector={null}
      />
      <span
        className="dnb-input__row"
      >
        <span
          className="dnb-input__shell"
        >
          <input
            autoComplete="off"
            className="dnb-input__input"
            disabled={false}
            id="input"
            name="input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            type="text"
            value="test"
          />
        </span>
      </span>
    </span>
  </span>
</Input>
`;

exports[`Input scss have to match default theme snapshot 1`] = `
"/*
* Input theme
*
*/
/**
 * This file is only used to make themes independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
 * Utilities
 */
.dnb-input {
  color: var(--color-black); }
  .dnb-input__inner {
    color: inherit; }
  .dnb-input__shell {
    color: inherit;
    background-color: var(--color-white);
    border: none;
    --border-color: var(--color-sea-green);
    box-shadow: inset 0 0 0 var(--input-border-width) var(--border-color);
    /* iOS fix - because \\"inset\\" works not fine with border-radius */
    /* Safari fix - because \\"inset\\" works not fine with border-radius if the user zooms the page */
    border-color: transparent; }
    @supports (-webkit-touch-callout: none) {
      .dnb-input__shell {
        box-shadow: 0 0 0 var(--input-border-width) var(--border-color); } }
    @media not all and (min-resolution: 0.001dpcm) {
      @supports (-webkit-appearance: none) and (stroke-color: transparent) and (not (-webkit-overflow-scrolling: touch)) {
        .dnb-input__shell {
          box-shadow: 0 0 0 var(--input-border-width) var(--border-color); } } }
    @media screen and (-ms-high-contrast: none) {
      .dnb-input__shell {
        box-shadow: inset 0 0 0 1px var(--color-sea-green); } }
  .dnb-input__icon {
    color: var(--color-sea-green); }
  .dnb-input[data-input-state='disabled'] .dnb-input__shell {
    -webkit-text-fill-color: currentColor;
    --border-color: var(--color-black-55);
    box-shadow: inset 0 0 0 var(--input-border-width) var(--border-color);
    /* iOS fix - because \\"inset\\" works not fine with border-radius */
    /* Safari fix - because \\"inset\\" works not fine with border-radius if the user zooms the page */
    border-color: transparent;
    background-color: var(--color-black-3); }
    .dnb-input[data-input-state='disabled'] .dnb-input__shell,
    .dnb-input[data-input-state='disabled'] .dnb-input__shell .dnb-icon {
      color: var(--color-black-55); }
    @supports (-webkit-touch-callout: none) {
      .dnb-input[data-input-state='disabled'] .dnb-input__shell {
        box-shadow: 0 0 0 var(--input-border-width) var(--border-color); } }
    @media not all and (min-resolution: 0.001dpcm) {
      @supports (-webkit-appearance: none) and (stroke-color: transparent) and (not (-webkit-overflow-scrolling: touch)) {
        .dnb-input[data-input-state='disabled'] .dnb-input__shell {
          box-shadow: 0 0 0 var(--input-border-width) var(--border-color); } } }
    @media screen and (-ms-high-contrast: none) {
      .dnb-input[data-input-state='disabled'] .dnb-input__shell {
        box-shadow: inset 0 0 0 1px var(--color-black-55); } }
  .dnb-input:not([data-input-state='disabled']) .dnb-input__shell:hover,
  .dnb-input:not([data-input-state='disabled']):hover .dnb-input__shell {
    --border-color: var(--color-sea-green);
    box-shadow: 0 0 0 0.125rem var(--border-color);
    border-color: transparent; }
    @media screen and (-ms-high-contrast: none) {
      .dnb-input:not([data-input-state='disabled']) .dnb-input__shell:hover,
      .dnb-input:not([data-input-state='disabled']):hover .dnb-input__shell {
        box-shadow: 0 0 0 0.125rem var(--color-sea-green); } }
  .dnb-input[data-input-state='focus']:not([data-input-state='disabled']) .dnb-input__shell {
    --border-color: var(--color-emerald-green);
    box-shadow: 0 0 0 0.125rem var(--border-color);
    border-color: transparent; }
    @media screen and (-ms-high-contrast: none) {
      .dnb-input[data-input-state='focus']:not([data-input-state='disabled']) .dnb-input__shell {
        box-shadow: 0 0 0 0.125rem var(--color-emerald-green); } }
  .dnb-input__status--error.dnb-input:not([data-input-state='focus']) .dnb-input__shell {
    color: var(--color-fire-red); }
  .dnb-input__status--error.dnb-input:not([data-input-state='focus']):not(:hover) .dnb-input__shell {
    --border-color: var(--color-fire-red);
    box-shadow: 0 0 0 0.0625rem var(--border-color);
    border-color: transparent; }
    @media screen and (-ms-high-contrast: none) {
      .dnb-input__status--error.dnb-input:not([data-input-state='focus']):not(:hover) .dnb-input__shell {
        box-shadow: 0 0 0 0.0625rem var(--color-fire-red); } }
  .dnb-input__status--error.dnb-input[data-input-state='focus'] .dnb-input__shell,
  .dnb-input__status--error.dnb-input:not([data-input-state='disabled']) .dnb-input__shell:hover,
  .dnb-input__status--error.dnb-input:not([data-input-state='disabled']):hover .dnb-input__shell {
    --border-color: var(--color-fire-red);
    box-shadow: 0 0 0 0.125rem var(--border-color);
    border-color: transparent; }
    @media screen and (-ms-high-contrast: none) {
      .dnb-input__status--error.dnb-input[data-input-state='focus'] .dnb-input__shell,
      .dnb-input__status--error.dnb-input:not([data-input-state='disabled']) .dnb-input__shell:hover,
      .dnb-input__status--error.dnb-input:not([data-input-state='disabled']):hover .dnb-input__shell {
        box-shadow: 0 0 0 0.125rem var(--color-fire-red); } }
  html:not([data-whatintent='touch'])
.dnb-input__status--error .dnb-input__submit-button__button.dnb-button--secondary:not([disabled]):hover, html:not([data-whatintent='touch'])
.dnb-input__status--error .dnb-input__submit-button__button.dnb-button--secondary:not([disabled]):hover::after,
  html:not([data-whatintent='touch'])
.dnb-input__status--error .dnb-input__submit-button__button.dnb-button--secondary:not([disabled]):focus,
  html:not([data-whatintent='touch'])
.dnb-input__status--error .dnb-input__submit-button__button.dnb-button--secondary:not([disabled]):focus::after {
    background-color: var(--color-fire-red); }
  html:not([data-whatintent='touch'])
.dnb-input__status--error .dnb-input__submit-button__button.dnb-button--secondary:not([disabled]):hover:active,
  html:not([data-whatintent='touch'])
.dnb-input__status--error .dnb-input__submit-button__button.dnb-button--secondary:not([disabled]):focus:active {
    color: var(--color-white); }
  .dnb-input__status--error .dnb-input__icon {
    color: var(--color-fire-red); }
  .dnb-input__input::selection {
    background-color: var(--color-mint-green);
    color: var(--color-black);
    text-shadow: none; }
  .dnb-input__placeholder {
    color: var(--color-black-55); }
  .dnb-input[data-input-state='focus'] .dnb-input__placeholder {
    display: none; }
  .dnb-input--keep-placeholder .dnb-input[data-input-state='focus'] .dnb-input__placeholder {
    display: block;
    color: var(--color-black-20); }
"
`;

exports[`Input scss have to match snapshot 1`] = `
"/*
* DNB Input
*
*/
/**
 * This file is only used to make components independent
 * so that they can get imported individually, without the core styles
 *
 */
/*
 * Utilities
 */
/*
 * Scopes
 *
 */
/*
 * Document Reset
 *
 */
/*
* DNB Button
*
*/
/*
* DNB icon
*
*/
/*
* Icon component
*
*/
.dnb-icon {
  display: inline-block;
  vertical-align: middle;
  font-size: 1rem;
  line-height: 1rem;
  color: inherit;
  width: 1em;
  height: 1em; }
  .dnb-icon img,
  .dnb-icon svg {
    width: inherit;
    height: inherit;
    shape-rendering: geometricPrecision;
    vertical-align: top; }
  .dnb-icon svg[width='100%'] {
    width: inherit; }
  .dnb-icon svg[height='100%'] {
    height: inherit; }
  .dnb-icon--inherit-color svg:not([fill]),
  .dnb-icon--inherit-color svg [fill] {
    fill: currentColor; }
  .dnb-icon--inherit-color svg [stroke] {
    stroke: currentColor; }
  .dnb-icon--small {
    font-size: 0.75rem; }
  .dnb-icon--default {
    font-size: 1rem; }
  .dnb-icon--medium {
    font-size: 1.5rem; }
  .dnb-icon--large {
    font-size: 2rem; }
  .dnb-icon--x-large {
    font-size: 2.5rem; }
  .dnb-icon--xx-large {
    font-size: 3rem; }
  .dnb-icon--custom-size {
    width: auto;
    height: auto; }
  .dnb-icon--auto {
    font-size: 1em; }
  .dnb-icon--auto > .dnb-icon--wrapper {
    display: inline-flex;
    align-items: center;
    justify-content: center; }
  h1 .dnb-icon,
  h2 .dnb-icon,
  h3 .dnb-icon,
  h4 .dnb-icon,
  h5 .dnb-icon,
  h6 .dnb-icon {
    vertical-align: middle; }
  .dnb-icon.dnb-skeleton {
    color: var(--skeleton-color) !important; }
    .dnb-icon.dnb-skeleton::before, .dnb-icon.dnb-skeleton::after {
      content: none !important; }
  @media screen and (-ms-high-contrast: none) {
    .dnb-icon {
      flex: none; } }

/*
* DNB Tooltip
*
*/
.dnb-tooltip {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-basis);
  font-size: var(--font-size-small);
  font-style: normal;
  line-height: var(--line-height-basis);
  color: var(--color-black-80, #333);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  /**
  * Ensure consistency and use the same as HTML reset -> html {...}
  * between base and code package
  */
  -moz-tab-size: 4;
  tab-size: 4;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  word-break: break-word;
  /**
  * 1. Remove repeating backgrounds in all browsers (opinionated).
  * 2. Add border box sizing in all browsers (opinionated).
  */
  /**
  * 1. Add text decoration inheritance in all browsers (opinionated).
  * 2. Add vertical alignment inheritance in all browsers (opinionated).
  */
  margin: 0;
  padding: 0; }
  .dnb-tooltip *,
  .dnb-tooltip ::before,
  .dnb-tooltip ::after {
    background-repeat: no-repeat;
    /* 1 */
    box-sizing: border-box;
    /* 2 */ }
  .dnb-tooltip ::before,
  .dnb-tooltip ::after {
    text-decoration: inherit;
    /* 1 */
    vertical-align: inherit;
    /* 2 */ }

/*
* Tooltip component
*
*/
.dnb-tooltip {
  position: absolute;
  z-index: 3100;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0 1rem;
  opacity: 0;
  visibility: hidden;
  transition: opacity 200ms ease-out; }
  .dnb-tooltip--large {
    padding: 0.25rem 1rem; }
  .dnb-tooltip--animate_position {
    transition: all 300ms ease-in-out, opacity 200ms ease-out; }
  .dnb-tooltip--active {
    visibility: visible;
    /*
      because of the first \\"show\\" we also use animation
      also, use forwards because of the usage of visibility
    */
    animation: show-tooltip 200ms ease-out forwards; }
  html[data-visual-test] .dnb-tooltip--active, .dnb-tooltip--active.dnb-tooltip--no-animation {
    animation: show-tooltip 1ms ease-out forwards; }
  .dnb-tooltip--hide {
    visibility: visible;
    animation: hide-tooltip 200ms ease-in-out forwards; }
  .dnb-tooltip--hide.dnb-tooltip--no-animation {
    animation: hide-tooltip 1ms ease-out forwards; }
  .dnb-tooltip--fixed {
    position: fixed; }
  html[data-visual-test] .dnb-tooltip--hide {
    animation: hide-tooltip 1ms ease-out 1s forwards; }
  .dnb-tooltip__portal {
    position: absolute;
    top: 0;
    left: 0;
    right: 0; }
  .dnb-tooltip__content {
    min-width: 2rem;
    min-height: 1.5rem;
    padding: 0; }
  .dnb-tooltip__arrow {
    position: absolute;
    pointer-events: none;
    margin: 0;
    width: 1rem;
    height: 0.5rem;
    overflow: hidden; }
    .dnb-tooltip__arrow::before {
      content: '';
      position: absolute;
      bottom: 0;
      left: 0;
      width: 1rem;
      height: 1rem;
      transform: translateY(70%) rotate(45deg); }
    .dnb-tooltip__arrow__position--bottom {
      top: -0.5rem; }
    .dnb-tooltip__arrow__position--top {
      bottom: -0.5rem;
      transform: rotate(180deg); }
    .dnb-tooltip__arrow__position--left {
      right: -0.75rem;
      margin-right: 3px;
      transform: rotate(90deg); }
    .dnb-tooltip__arrow__position--right {
      left: -0.75rem;
      margin-left: 3px;
      transform: rotate(270deg); }
    .dnb-tooltip__arrow__arrow--left {
      align-self: flex-start; }
    .dnb-tooltip__arrow__arrow--right {
      align-self: flex-end; }

@keyframes show-tooltip {
  from {
    opacity: 0; }
  to {
    opacity: 1; } }

@keyframes hide-tooltip {
  from {
    opacity: 1; }
  to {
    opacity: 0;
    visibility: hidden; } }

/*
* DNB FormStatus
*
*/
.dnb-form-status {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-basis);
  font-size: var(--font-size-small);
  font-style: normal;
  line-height: var(--line-height-basis);
  color: var(--color-black-80, #333);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  /**
  * Ensure consistency and use the same as HTML reset -> html {...}
  * between base and code package
  */
  -moz-tab-size: 4;
  tab-size: 4;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  word-break: break-word;
  /**
  * 1. Remove repeating backgrounds in all browsers (opinionated).
  * 2. Add border box sizing in all browsers (opinionated).
  */
  /**
  * 1. Add text decoration inheritance in all browsers (opinionated).
  * 2. Add vertical alignment inheritance in all browsers (opinionated).
  */
  margin: 0;
  padding: 0; }
  .dnb-form-status *,
  .dnb-form-status ::before,
  .dnb-form-status ::after {
    background-repeat: no-repeat;
    /* 1 */
    box-sizing: border-box;
    /* 2 */ }
  .dnb-form-status ::before,
  .dnb-form-status ::after {
    text-decoration: inherit;
    /* 1 */
    vertical-align: inherit;
    /* 2 */ }

/*
 * FormStatus component
 *
 */
:root {
  --form-status-radius: 0.25rem; }

.dnb-form-status {
  display: flex;
  opacity: 1;
  transition: height 400ms cubic-bezier(0.42, 0, 0, 1), opacity 400ms cubic-bezier(0.42, 0, 0, 1), margin 400ms cubic-bezier(0.42, 0, 0, 1), padding 400ms cubic-bezier(0.42, 0, 0, 1); }
  .dnb-form-status--hidden {
    will-change: height, opacity, margin, padding;
    width: 0;
    height: 0;
    opacity: 0; }
  .dnb-form-status--is-animating {
    overflow: hidden;
    width: auto; }
  .dnb-form-status--disappear, .dnb-form-status--hidden {
    margin: 0 !important;
    padding: 0 !important; }
  .dnb-form-status__shell {
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
    min-width: inherit;
    border-radius: var(--form-status-radius); }
  .dnb-form-status__text {
    padding: 0.625rem 1rem;
    cursor: text;
    color: inherit;
    line-height: var(--line-height-small);
    font-size: var(--font-size-small);
    white-space: normal; }
    button .dnb-form-status__text {
      cursor: inherit; }
    .dnb-form-status__text .dnb-anchor {
      font-size: inherit; }
  .dnb-icon + .dnb-form-status__text {
    padding-left: 0.5rem; }
  .dnb-form-status__shell > .dnb-icon {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0.3333333em 0.3333333em 0.3333333em 0.6666666em; }
  .dnb-form-status__size--large .dnb-form-status__text {
    padding-top: 1.125rem;
    padding-bottom: 1.125rem; }
  .dnb-form-status__size--large .dnb-form-status__shell > .dnb-icon {
    margin-top: 0.6666666em;
    margin-bottom: 0.6666666em; }
  .dnb-form-status--stretch {
    flex-grow: 1; }
  .dnb-form-status--stretch .dnb-form-status__shell {
    width: 100%; }
  .dnb-form-status--stretch .dnb-form-status__text {
    max-width: 47rem; }
  .dnb-form-status[hidden] {
    display: none; }
  .dnb-form-status--no-animation,
  html[data-visual-test] .dnb-form-status {
    transition-duration: 1ms !important; }
  @media screen and (-ms-high-contrast: none) {
    .dnb-form-status__shell > .dnb-icon {
      border-width: 1px; } }

.dnb-button {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-basis);
  font-size: var(--font-size-small);
  font-style: normal;
  line-height: var(--line-height-basis);
  color: var(--color-black-80, #333);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  /**
  * Ensure consistency and use the same as HTML reset -> html {...}
  * between base and code package
  */
  -moz-tab-size: 4;
  tab-size: 4;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  word-break: break-word;
  /**
  * 1. Remove repeating backgrounds in all browsers (opinionated).
  * 2. Add border box sizing in all browsers (opinionated).
  */
  /**
  * 1. Add text decoration inheritance in all browsers (opinionated).
  * 2. Add vertical alignment inheritance in all browsers (opinionated).
  */
  margin: 0;
  padding: 0; }
  .dnb-button *,
  .dnb-button ::before,
  .dnb-button ::after {
    background-repeat: no-repeat;
    /* 1 */
    box-sizing: border-box;
    /* 2 */ }
  .dnb-button ::before,
  .dnb-button ::after {
    text-decoration: inherit;
    /* 1 */
    vertical-align: inherit;
    /* 2 */ }

/*
* Button component
*
*/
:root {
  --button-font-size: var(--font-size-basis);
  --button-font-size-small: var(--font-size-small);
  --button-width: 2.5rem;
  --button-height: 2.5rem;
  --button-width--small: 1.5rem;
  --button-height--small: 1.5rem;
  --button-width--medium: 2rem;
  --button-height--medium: 2rem;
  --button-width--large: 3rem;
  --button-height--large: 3rem;
  --button-icon-size: 1rem;
  --button-border-width: 0.0625rem;
  --button-border-width--hover: 0.1875rem;
  --button-border-radius: calc(var(--button-height) / 2);
  --button-border-radius--small: calc(var(--button-height--small) / 2);
  --button-border-radius--medium: calc(var(--button-height--medium) / 2);
  --button-border-radius--large: calc(var(--button-height--large) / 2); }

.dnb-button {
  position: relative;
  user-select: none;
  -webkit-user-select: none;
  cursor: pointer;
  white-space: nowrap;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: var(--button-width);
  height: auto;
  padding: 0;
  border: var(--button-border-width) solid transparent;
  border-radius: var(--button-border-radius);
  text-decoration: none;
  font-size: var(--font-size-small);
  /* stylelint-disable-next-line */ }
  .dnb-button--wrap {
    overflow-wrap: break-word;
    white-space: normal; }
  .dnb-button,
  .dnb-core-style .dnb-button {
    line-height: var(--button-height); }
  .dnb-button__text {
    margin: 0.5rem 0;
    font-size: var(--button-font-size);
    line-height: var(--line-height-basis);
    color: inherit;
    transform: translateY(-0.03125rem); }
    .dnb-button__text [data-os='linux'] {
      transform: translateY(-0.035rem); }
  .dnb-button__alignment {
    display: inline-block;
    width: 0; }
  .dnb-button__bounding {
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    transform: scale(1.1, 1.4);
    background-color: transparent;
    border-radius: var(--button-border-radius); }
  .dnb-button--has-text {
    padding-left: 1.5rem;
    padding-right: 1.5rem; }
  .dnb-button--size-small {
    width: var(--button-width--small);
    font-size: var(--button-font-size-small);
    border-radius: var(--button-border-radius--small); }
    .dnb-button--size-small,
    .dnb-core-style .dnb-button--size-small {
      line-height: var(--button-height--small); }
  .dnb-button--size-small .dnb-button__text {
    margin: 0; }
  .dnb-button--has-text.dnb-button--size-small {
    padding-left: 1rem;
    padding-right: 1rem; }
  .dnb-button--has-text.dnb-button--icon-position-left.dnb-button--size-small {
    padding-left: 0.5rem; }
  .dnb-button--has-text.dnb-button--icon-position-right.dnb-button--size-small {
    padding-right: 0.5rem; }
  .dnb-button--size-medium {
    width: var(--button-width--medium);
    border-radius: var(--button-border-radius--medium); }
    .dnb-button--size-medium,
    .dnb-core-style .dnb-button--size-medium {
      line-height: var(--button-height--medium); }
  .dnb-button--size-medium .dnb-button__text {
    margin: 0; }
  .dnb-button--has-text.dnb-button--size-medium {
    padding-left: 1rem;
    padding-right: 1rem; }
  .dnb-button--has-text.dnb-button--icon-position-left.dnb-button--size-medium {
    padding-left: 0.5rem; }
  .dnb-button--has-text.dnb-button--icon-position-right.dnb-button--size-medium {
    padding-right: 0.5rem; }
  .dnb-button--size-large {
    width: var(--button-width--large);
    border-radius: var(--button-border-radius--large); }
    .dnb-button--size-large,
    .dnb-core-style .dnb-button--size-large {
      line-height: var(--button-height--large); }
  .dnb-button--has-text.dnb-button--size-large {
    padding-left: 2rem;
    padding-right: 2rem; }
  .dnb-button--has-text.dnb-button--icon-position-left.dnb-button--size-large {
    padding-left: 1rem; }
  .dnb-button--has-text.dnb-button--icon-position-right.dnb-button--size-large {
    padding-right: 1rem; }
  .dnb-button--has-text {
    width: auto; }
  .dnb-button--has-text .dnb-button__icon {
    margin: 0 calc(var(--button-icon-size) / 2); }
  .dnb-button--has-text.dnb-button--icon-position-left {
    padding-left: 0.5rem; }
  .dnb-button--has-text.dnb-button--icon-position-right {
    padding-right: 0.5rem; }
  .dnb-button--has-text.dnb-button--has-icon .dnb-button__icon {
    order: 2; }
  .dnb-button--has-text.dnb-button--has-icon .dnb-button__text {
    order: 1; }
  .dnb-button:not(.dnb-button--has-text) .dnb-button__icon {
    width: inherit; }
  .dnb-button__icon.dnb-icon svg:not([width]):not([height]) {
    width: var(--button-icon-size);
    height: var(--button-icon-size); }
  [href] > .dnb-button__icon.dnb-icon {
    line-height: var(--button-font-size); }
  .dnb-button--has-text.dnb-button--has-icon.dnb-button--icon-position-left .dnb-button__icon, .dnb-button--has-text.dnb-button--has-icon.dnb-button--icon-position-top .dnb-button__icon {
    order: 1; }
  .dnb-button--has-text.dnb-button--has-icon.dnb-button--icon-position-left > *,
  .dnb-button--has-text.dnb-button--has-icon.dnb-button--icon-position-left .dnb-button__text, .dnb-button--has-text.dnb-button--has-icon.dnb-button--icon-position-top > *,
  .dnb-button--has-text.dnb-button--has-icon.dnb-button--icon-position-top .dnb-button__text {
    order: 2; }
  .dnb-button--stretch {
    width: 100%; }
  .dnb-button--reset {
    margin: 0;
    padding: 0;
    width: auto;
    height: auto;
    overflow: visible;
    border: none;
    border-radius: 0;
    background-color: transparent;
    appearance: none;
    box-shadow: none;
    color: inherit;
    font: inherit;
    text-align: inherit;
    line-height: inherit; }
    html:not([data-whatintent='touch']) .dnb-button--reset:hover[disabled] {
      cursor: not-allowed; }
    html:not([data-whatintent='touch']) .dnb-button--reset:hover:not([disabled]) {
      box-shadow: none;
      border: none; }
    .dnb-button--reset:not([disabled]):focus, .dnb-button--reset:not([disabled]):active {
      outline: none; }
      html[data-whatinput='keyboard'] .dnb-button--reset:not([disabled]):focus, html[data-whatinput='keyboard'] .dnb-button--reset:not([disabled]):active {
        --border-color: var(--color-emerald-green);
        box-shadow: 0 0 0 0.125rem var(--border-color);
        border-color: transparent; }
        @media screen and (-ms-high-contrast: none) {
          html[data-whatinput='keyboard'] .dnb-button--reset:not([disabled]):focus, html[data-whatinput='keyboard'] .dnb-button--reset:not([disabled]):active {
            box-shadow: 0 0 0 0.125rem var(--color-emerald-green); } }
    html[data-whatinput='mouse'] .dnb-button--reset:not([disabled]):focus,
    html[data-whatinput='mouse'] .dnb-button--reset:not([disabled]):active {
      box-shadow: none;
      color: inherit;
      border: none; }
  .dnb-button[type='button'], .dnb-button[type='reset'], .dnb-button[type='submit'] {
    appearance: none;
    -moz-appearance: none;
    -webkit-appearance: none; }
  .dnb-button[disabled] {
    cursor: not-allowed;
    outline: none; }
  .dnb-form-row--vertical .dnb-form-row__content > .dnb-button {
    align-self: flex-start; }
  .dnb-form-row--horizontal .dnb-form-row__content .dnb-button__text {
    white-space: nowrap; }
  .dnb-button + .dnb-form-status {
    margin-top: 0.5rem; }
  @media screen and (-ms-high-contrast: none) {
    .dnb-button {
      flex: none; }
      .dnb-button__icon, .dnb-button__text {
        transform: translateY(-0.0625rem); } }

/* Firefox includes a hidden border which messes up button dimensions */
button.dnb-button::-moz-focus-inner {
  border: none; }

/*
* DNB FormLabel
*
*/
.dnb-form-label {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-basis);
  font-size: var(--font-size-small);
  font-style: normal;
  line-height: var(--line-height-basis);
  color: var(--color-black-80, #333);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  /**
  * Ensure consistency and use the same as HTML reset -> html {...}
  * between base and code package
  */
  -moz-tab-size: 4;
  tab-size: 4;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  word-break: break-word;
  /**
  * 1. Remove repeating backgrounds in all browsers (opinionated).
  * 2. Add border box sizing in all browsers (opinionated).
  */
  /**
  * 1. Add text decoration inheritance in all browsers (opinionated).
  * 2. Add vertical alignment inheritance in all browsers (opinionated).
  */
  margin: 0;
  padding: 0; }
  .dnb-form-label *,
  .dnb-form-label ::before,
  .dnb-form-label ::after {
    background-repeat: no-repeat;
    /* 1 */
    box-sizing: border-box;
    /* 2 */ }
  .dnb-form-label ::before,
  .dnb-form-label ::after {
    text-decoration: inherit;
    /* 1 */
    vertical-align: inherit;
    /* 2 */ }

/*
 * FormLabel component
 *
 */
.dnb-form-label {
  display: inline-block;
  width: auto;
  padding: 0;
  margin-right: 1rem;
  text-align: left;
  vertical-align: baseline;
  white-space: pre-wrap;
  word-break: normal;
  font-size: var(--font-size-basis);
  color: inherit; }
  .dnb-form-label--vertical {
    display: block;
    margin-right: 0;
    margin-bottom: 0.5rem; }
  .dnb-form-label--sr-only {
    width: 1px !important;
    margin: 0 !important;
    padding: 0 !important;
    margin-left: -1px !important;
    overflow: hidden !important;
    white-space: nowrap !important; }
  .dnb-form-label[for]:not([disabled]) {
    user-select: none;
    -webkit-user-select: none;
    cursor: pointer; }
  .dnb-form-label[disabled] {
    cursor: not-allowed; }
  @media screen and (-ms-high-contrast: none) {
    .dnb-form-label {
      max-width: 60vw; } }

legend.dnb-form-label {
  display: inline-block; }

.dnb-input {
  font-family: var(--font-family-default);
  font-weight: var(--font-weight-basis);
  font-size: var(--font-size-small);
  font-style: normal;
  line-height: var(--line-height-basis);
  color: var(--color-black-80, #333);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  /**
  * Ensure consistency and use the same as HTML reset -> html {...}
  * between base and code package
  */
  -moz-tab-size: 4;
  tab-size: 4;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  word-break: break-word;
  /**
  * 1. Remove repeating backgrounds in all browsers (opinionated).
  * 2. Add border box sizing in all browsers (opinionated).
  */
  /**
  * 1. Add text decoration inheritance in all browsers (opinionated).
  * 2. Add vertical alignment inheritance in all browsers (opinionated).
  */
  margin: 0;
  padding: 0; }
  .dnb-input *,
  .dnb-input ::before,
  .dnb-input ::after {
    background-repeat: no-repeat;
    /* 1 */
    box-sizing: border-box;
    /* 2 */ }
  .dnb-input ::before,
  .dnb-input ::after {
    text-decoration: inherit;
    /* 1 */
    vertical-align: inherit;
    /* 2 */ }

/*
* Input component
*
*/
:root {
  --input-font-size: var(--font-size-basis);
  --input-font-size--small: var(--font-size-basis);
  --input-font-size--medium: var(--font-size-basis);
  --input-font-size--large: var(--font-size-medium);
  --input-padding: 1rem;
  --input-padding--small: 1rem;
  --input-padding--medium: 1rem;
  --input-padding--large: 1rem;
  --input-height: 2rem;
  --input-height--small: 1.5rem;
  --input-height--medium: 2.5rem;
  --input-height--large: 3rem;
  --input-border-width: 0.0625rem;
  --input-border-radius: 0.25rem; }

.dnb-input {
  display: inline-flex;
  align-items: center;
  font-size: var(--input-font-small);
  line-height: var(--input-height);
  text-align: left; }
  .dnb-input__inner {
    display: inline-flex;
    flex-direction: column;
    width: auto; }
  .dnb-input__shell {
    position: relative;
    display: flex;
    align-items: center;
    border: var(--input-border-width) solid var(--color-sea-green); }
  .dnb-input__input {
    border: none;
    outline: none;
    word-break: normal;
    position: relative;
    z-index: 2; }
  .dnb-input__input[disabled] {
    user-select: none;
    -webkit-user-select: none;
    opacity: 1; }
  .dnb-input__shell, .dnb-input__input {
    height: var(--input-height);
    border-radius: var(--input-border-radius); }
  .dnb-input__placeholder, .dnb-input__input {
    width: 100%;
    padding-left: var(--input-padding);
    padding-right: var(--input-padding); }
  .dnb-input__placeholder, .dnb-input__input,
  .dnb-input input.dnb-input__input {
    padding-top: 0;
    padding-bottom: 0;
    color: inherit;
    background-color: transparent;
    font-size: var(--input-font-size);
    line-height: inherit; }
  .dnb-input__placeholder {
    pointer-events: none;
    position: absolute;
    z-index: 1;
    top: 0;
    left: 0;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis; }
  .dnb-input input.dnb-input__input[type='file'] {
    line-height: calc(var(--input-height) - 2px); }
  .dnb-input__input::-webkit-search-cancel-button {
    display: none; }
  .dnb-input__input::-ms-clear {
    display: none; }
  .dnb-input ::-webkit-file-upload-button {
    cursor: pointer;
    outline: none;
    color: var(--color-sea-green); }
    .dnb-input ::-webkit-file-upload-button:active, .dnb-input ::-webkit-file-upload-button:hover {
      color: var(--color-emerald-green); }
  .dnb-input--has-submit-element .dnb-input__placeholder,
  .dnb-input--has-submit-element .dnb-input__input,
  .dnb-input--has-clear-button .dnb-input__placeholder,
  .dnb-input--has-clear-button .dnb-input__input {
    padding-right: calc(var(--input-padding) * 2.5); }
  .dnb-input--password .dnb-input__placeholder,
  .dnb-input--password .dnb-input__input {
    margin-right: 2.5rem;
    padding-right: 0; }
    .dnb-input--password .dnb-input__placeholder::-ms-clear,
    .dnb-input--password .dnb-input__input::-ms-clear {
      display: none; }
  .dnb-input--password .dnb-input__placeholder {
    padding-right: 4rem; }
  .dnb-input--password .dnb-input__input {
    font-family: var(--font-family-monospace); }
  .dnb-input__row {
    display: inline-flex;
    align-items: center; }
  .dnb-input__suffix {
    color: inherit; }
  .dnb-input__submit-element {
    z-index: 3;
    margin-left: calc(1px - 1px - var(--input-height));
    line-height: var(--line-height-basis); }
  .dnb-input__submit-button {
    position: relative;
    align-self: center;
    /* IE needs this to stay centered */ }
    .dnb-input__submit-button__button {
      border-radius: 0 var(--input-border-radius) var(--input-border-radius) 0; }
  .dnb-input > .dnb-form-label {
    line-height: var(--line-height-basis); }
  @media screen and (max-width: 40em) {
    .dnb-input {
      flex-wrap: wrap; }
      .dnb-input > .dnb-form-label {
        margin-bottom: 0.5rem;
        margin-top: 0.5rem; } }
  .dnb-input:not(.dnb-input--vertical)[class*='__status'] {
    align-items: flex-start; }
    .dnb-input:not(.dnb-input--vertical)[class*='__status'] > .dnb-form-label {
      margin-top: 0.25rem; }
  .dnb-input--small {
    line-height: var(--input-height--small); }
    .dnb-input--small .dnb-input__shell,
    .dnb-input--small .dnb-input__input {
      height: var(--input-height--small); }
    .dnb-input--small .dnb-input__placeholder,
    .dnb-input--small .dnb-input__input {
      padding-left: var(--input-padding--small);
      padding-right: var(--input-padding--small);
      font-size: var(--input-font-size--small); }
    .dnb-input--small .dnb-input__submit-element {
      margin-left: calc(1px - 1px - var(--input-height--small)); }
      .dnb-input--small .dnb-input__submit-element .dnb-button--input-button {
        width: var(--input-height--small);
        height: var(--input-height--small);
        line-height: var(--input-height--small); }
  .dnb-input--small.dnb-input--has-submit-element .dnb-input__placeholder,
  .dnb-input--small.dnb-input--has-submit-element .dnb-input__input,
  .dnb-input--small.dnb-input--has-clear-button .dnb-input__placeholder,
  .dnb-input--small.dnb-input--has-clear-button .dnb-input__input {
    padding-right: calc(var(--input-padding--small) * 2); }
  .dnb-input--medium {
    line-height: var(--input-height--medium); }
    .dnb-input--medium .dnb-input__shell,
    .dnb-input--medium .dnb-input__input {
      height: var(--input-height--medium); }
    .dnb-input--medium .dnb-input__placeholder,
    .dnb-input--medium .dnb-input__input {
      padding-left: var(--input-padding--medium);
      padding-right: var(--input-padding--medium);
      font-size: var(--input-font-size--medium); }
    .dnb-input--medium .dnb-input__submit-element {
      margin-left: calc(1px - 1px - var(--input-height--medium)); }
      .dnb-input--medium .dnb-input__submit-element .dnb-button--input-button {
        width: var(--input-height--medium);
        height: var(--input-height--medium);
        line-height: var(--input-height--medium); }
  .dnb-input--medium.dnb-input--has-submit-element .dnb-input__placeholder,
  .dnb-input--medium.dnb-input--has-submit-element .dnb-input__input,
  .dnb-input--medium.dnb-input--has-clear-button .dnb-input__placeholder,
  .dnb-input--medium.dnb-input--has-clear-button .dnb-input__input {
    padding-right: calc(var(--input-padding--medium) * 3); }
  .dnb-input--large {
    line-height: var(--input-height--large); }
    .dnb-input--large .dnb-input__shell,
    .dnb-input--large .dnb-input__input {
      height: var(--input-height--large); }
    .dnb-input--large .dnb-input__placeholder,
    .dnb-input--large .dnb-input__input {
      padding-left: var(--input-padding--large);
      padding-right: var(--input-padding--large);
      font-size: var(--input-font-size--large); }
    .dnb-input--large .dnb-input__submit-element {
      margin-left: calc(1px - 1px - var(--input-height--large)); }
      .dnb-input--large .dnb-input__submit-element .dnb-button--input-button {
        width: var(--input-height--large);
        height: var(--input-height--large); }
  .dnb-input--large.dnb-input--has-submit-element .dnb-input__placeholder,
  .dnb-input--large.dnb-input--has-submit-element .dnb-input__input,
  .dnb-input--large.dnb-input--has-clear-button .dnb-input__placeholder,
  .dnb-input--large.dnb-input--has-clear-button .dnb-input__input {
    padding-right: calc(var(--input-padding--large) * 3); }
  .dnb-input--large.dnb-input--has-clear-button:not(.dnb-input--has-submit-element) .dnb-input__submit-element {
    margin-left: calc(1px - 1px - var(--input-height--large) + 0.5rem); }
  .dnb-input__align--center .dnb-input__placeholder,
  .dnb-input__align--center .dnb-input__input {
    text-align: center; }
  .dnb-input__align--right .dnb-input__placeholder,
  .dnb-input__align--right .dnb-input__input {
    text-align: right; }
  .dnb-input--clear.dnb-input__submit-element {
    opacity: 0;
    transition: opacity 200ms ease-in-out; }
    .dnb-input--clear.dnb-input__submit-element .dnb-button {
      width: var(--input-height--small);
      height: var(--input-height--small);
      border-radius: var(--button-border-radius); }
      .dnb-input--clear.dnb-input__submit-element .dnb-button .dnb-button__icon {
        margin: auto; }
      html:not([data-whatintent='touch'])
.dnb-input--clear.dnb-input__submit-element .dnb-button:not(.dnb-button--has-text):hover[disabled] {
        cursor: default; }
  .dnb-input--small .dnb-input--clear.dnb-input__submit-element .dnb-button {
    width: 1rem;
    height: 1rem; }
  .dnb-input--medium .dnb-input--clear.dnb-input__submit-element .dnb-button,
  .dnb-input--large .dnb-input--clear.dnb-input__submit-element .dnb-button {
    width: var(--input-height--small);
    height: var(--input-height--small); }
  .dnb-input[data-has-content='true'] .dnb-input--clear {
    opacity: 1; }
  .dnb-input--has-submit-element .dnb-input--clear.dnb-input__submit-element {
    margin-right: 2.5rem; }
  .dnb-input--small.dnb-input--has-submit-element .dnb-input--clear.dnb-input__submit-element {
    margin-right: 2rem; }
  .dnb-input--medium.dnb-input--has-submit-element .dnb-input--clear.dnb-input__submit-element {
    margin-right: 3rem; }
  .dnb-input--large.dnb-input--has-submit-element .dnb-input--clear.dnb-input__submit-element {
    margin-right: 3.5rem; }
  .dnb-input__inner > .dnb-form-status {
    order: 2;
    margin-top: 0.5rem; }
  .dnb-input--vertical {
    display: flex;
    flex-direction: column;
    align-items: flex-start; }
  .dnb-input--stretch {
    display: flex;
    flex-grow: 1; }
  .dnb-input--stretch .dnb-input__inner {
    flex-grow: 1; }
  .dnb-input--stretch .dnb-input__inner, .dnb-input--stretch .dnb-input__shell {
    width: 100%; }
  .dnb-input--stretch .dnb-form-label + .dnb-input__inner {
    width: auto; }
  .dnb-input--vertical.dnb-input--stretch .dnb-input__inner {
    width: 100%; }
  .dnb-form-row--horizontal .dnb-input--stretch {
    width: 100%; }
  .dnb-input__icon {
    order: 0;
    position: absolute;
    left: 1rem;
    right: auto;
    top: 0;
    bottom: 0;
    margin: auto; }
  .dnb-input--icon-position-right .dnb-input__icon {
    order: 1;
    left: auto;
    right: 1rem; }
  .dnb-input--icon-position-left.dnb-input--has-icon .dnb-input__input,
  .dnb-input--icon-position-left.dnb-input--has-icon .dnb-input__placeholder {
    padding-left: 2.5rem; }
  .dnb-input--icon-position-right.dnb-input--has-icon .dnb-input__input,
  .dnb-input--icon-position-right.dnb-input--has-icon .dnb-input__placeholder {
    padding-right: 2.5rem; }
  .dnb-input--icon-size-medium.dnb-input--icon-position-left.dnb-input--has-icon .dnb-input__input,
  .dnb-input--icon-size-medium.dnb-input--icon-position-left.dnb-input--has-icon .dnb-input__placeholder {
    padding-left: 3rem; }
  .dnb-input--icon-size-medium.dnb-input--icon-position-right.dnb-input--has-icon .dnb-input__input,
  .dnb-input--icon-size-medium.dnb-input--icon-position-right.dnb-input--has-icon .dnb-input__placeholder {
    padding-right: 3rem; }
  html[data-visual-test] .dnb-input__input {
    caret-color: var(--color-white); }
  @media screen and (max-width: 40em) {
    .dnb-responsive-component .dnb-input {
      display: flex;
      flex-direction: column;
      align-items: flex-start;
      margin-bottom: 0.5rem; }
      .dnb-responsive-component .dnb-input__row {
        align-items: flex-start; }
      .dnb-responsive-component .dnb-input > .dnb-form-label {
        margin-bottom: 0.5rem; } }
  @media screen and (-ms-high-contrast: none) {
    .dnb-input {
      vertical-align: baseline; }
      .dnb-form-row--horizontal .dnb-input, .dnb-input:not(.dnb-input--stretch) {
        flex: none; }
      .dnb-input__inner {
        width: 100%; }
      .dnb-input__input, .dnb-input__placeholder {
        transform: translateY(-0.0625rem); } }
"
`;
